[tool.poetry]
name = "lavacord.py"
version = "1.0.2a"
description = "Its a lavalink nodes manger to make a music bots for discord with python."
authors = ["CraazzzyyFoxx <38073783+CraazzzyyFoxx@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
hikari = "^2.0.0-alpha.108"
yarl = "^1.7.2"
tekore = "^4.3.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
